# cv-eye

./: .gitignore  .pre-commit-config.yaml  CODE_CONVENTION.md  IMPORTANT_NOTE.md  MLOPS.md  PYPI_PACKING.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: gh-pages.yml  python-package.yml
.github/workflows_templates/: master-python-package.yml  upload-python-package-setuptool.yml  upload-python-package.yml
eye/: inference.py
eye/depth/: image_depth.py
eye/detection/: object_detection.py
madan/cv/: README.md
madan/cv/recognition/: __init__.py  face-recognition.py
madan/cv/sensordata/: camerasensro.py
madan/cv/tracking/: objects_tracking.py
test/edgetpu_detection/: inference.py  object_detection.py
test/tflite_detection/: TFLite_detection_webcam.py  TFLite_detection_webcam_servo.py
test_modules/: main.py
