[tool.poetry]
name = "eye"
version = "0.1.0"
description = ""
authors = ["Madan Baduwal <madanbaduwal100@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7" # For scipy support we make 3.7
pyrealsense2 = "^2.45.0"
numpy = "^1.19.5"
opencv-python = "^4.5.2"
tf-estimator-nightly = "^2.6.0-alpha.2021052301"
tensorflow = "^2.5.0"
face-recognition = "^1.3.0"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
